--- a/src/app/components/shared/nav/nav.component.css
+++ b/src/app/components/shared/nav/nav.component.css
@@ -74,6 +74,10 @@
   }
 
   .nav-actions {
+    display: flex;
+    align-items: center;
     justify-content: center;
+    flex-grow: 0.111;
   }
+
 }
