--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -29,7 +29,7 @@
       </button>
 
       <!-- Cart drawer for shopping -->
-      <app-aside (click)="openDrawer()"></app-aside>
+      <app-aside (click)="toggleDrawer()"></app-aside>
     </div>
   </div>
 </mat-toolbar>
