--- a/src/app/components/shared/nav/search-item/search-item.component.html
+++ b/src/app/components/shared/nav/search-item/search-item.component.html
@@ -2,6 +2,7 @@
   <label class="relative max-w-full w-2/3">
     <input
       id="searchInputElement"
+      id="searchInput"
       #searchInputElement
       matInput
       [formControl]="searchInput"
