--- a/src/app/components/shared/aside/aside.component.css
+++ b/src/app/components/shared/aside/aside.component.css
@@ -1,79 +1,20 @@
-.cart-container {
-  height: 100%;
-}
-
-.cart-toolbar {
-  background-color: #f5f5f5;
-  color: #444;
-  height: 4rem;
+aside {
   display: flex;
+  align-items: center;
   justify-content: center;
-  align-items: center;
+  cursor: pointer;
+  margin: 1.11rem;
 }
 
-.cart-button {
-  display: flex;
-  align-items: center;
-  position: relative;
-  margin-right: 0.125rem;
-}
-
-.cart-button svg {
-  height: 1.5rem;
-  width: 1.5rem;
-  fill: currentColor;
-}
-
-.cart-button .text-gray-400 {
-  font-size: 0.875rem;
-  font-weight: 500;
-  line-height: 1.5;
-  color: #718096;
-}
-
-.cart-button .animate-ping {
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-.cart-button .relative {
-  position: relative;
-}
-
-.cart-button .absolute {
-  position: absolute;
-}
-
-.cart-button .h-3 {
-  height: 0.75rem;
-}
-
-.cart-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 1.11rem;
+aside:hover {
+  color: #7b7070;
 }
 
 .ping {
-  animation: blink 1s linear infinite;
-  padding: 0.625rem;
-  border-radius: 50%;
-  margin-right: 1.25rem;
-}
-
-@keyframes ping {
-  0% {
-    transform: scale(0.5);
-    opacity: 0.5;
-  }
-  50% {
-    transform: scale(1);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(2);
-    opacity: 0;
-  }
+  animation: blink 3.33s linear infinite;
+  transform: scale(1.11);
+  margin-right: 0.777rem;
+  border-radius: 77%;
 }
 
 @keyframes blink {
@@ -82,3 +23,14 @@
   100% {background-color: transparent;}
 }
 
+span {
+  padding-left: 0.111rem;
+  display: inline-block;
+  animation: scalePulse 1.11s ease-in-out infinite;
+}
+
+@keyframes scalePulse {
+  0% { transform: scale(1.01); }
+  50% { transform: scale(1.11); }
+  100% { transform: scale(1.21); }
+}
