--- a/src/app/components/shared/aside/aside.component.html
+++ b/src/app/components/shared/aside/aside.component.html
@@ -1,4 +1,4 @@
-<aside xLayout="row" fxLayoutAlign="flex-end center">
-  <mat-icon (click)="openDrawer()" [ngClass]="{'ping': (totalItemsForCart$.value > 0)}">shopping_cart</mat-icon>
+<aside (click)="openDrawer($event)">
+  <mat-icon [ngClass]="{'ping': (totalItemsForCart$.value > 0)}">shopping_cart</mat-icon>
   <span>{{totalItemsForCart$ | async}}</span>
 </aside>
