--- a/src/app/components/shared/nav/search-item/search-item.component.css
+++ b/src/app/components/shared/nav/search-item/search-item.component.css
@@ -28,3 +28,14 @@
   cursor: pointer;
   font-size: 1.25rem;
 }
+
+@media (max-width: 1001px) {
+  #searchInput::placeholder {
+    color: transparent;
+  }
+  .input-field {
+    border: none;
+    border-bottom: transparent;
+  }
+
+}
