--- a/src/app/pages/cart/cart-drawer.component.html
+++ b/src/app/pages/cart/cart-drawer.component.html
@@ -1,9 +1,9 @@
-<mat-sidenav-container  xLayout="row" fxLayoutAlign="center center" class="sidenav-container">
-  <mat-sidenav  #sidenav mode="push" class="sidenav">
-    <app-cart (closeClickedDrawer)="sidenav?.close()"></app-cart>
+<mat-sidenav-container>
+  <mat-sidenav mode="over" [opened]="isDrawerOpen$ | async">
+    <app-cart></app-cart>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <app-section (openClickedNav)="sidenav?.toggle()"></app-section>
+    <app-section></app-section>
   </mat-sidenav-content>
 ></mat-sidenav-container>
