--- a/src/app/pages/cart/cart-drawer.component.html
+++ b/src/app/pages/cart/cart-drawer.component.html
@@ -1,5 +1,8 @@
 <mat-sidenav-container>
-  <mat-sidenav mode="over" [opened]="isDrawerOpen$ | async">
+  <mat-sidenav mode="over" [opened]="isDrawerOpened$ | async">
+    <button mat-icon-button (click)="closeDrawer()">
+      <mat-icon>close</mat-icon>
+    </button>
     <app-cart></app-cart>
   </mat-sidenav>
 
