setup cart view with some propoerties linked to ICartItem

--- a/src/app/components/shared/aside/aside.component.html
+++ b/src/app/components/shared/aside/aside.component.html
@@ -1,4 +1,4 @@
 <aside (click)="openDrawer($event)">
-  <mat-icon [ngClass]="{'ping': (totalItemsForCart$.value > 0)}">shopping_cart</mat-icon>
-  <span>{{totalItemsForCart$ | async}}</span>
+  <mat-icon [ngClass]="{'ping': (totalItemsInCart$.value > 0)}">shopping_cart</mat-icon>
+  <span>{{totalItemsInCart$ | async}}</span>
 </aside>
