--- a/src/app/pages/not-found/not-found-page.component.html
+++ b/src/app/pages/not-found/not-found-page.component.html
@@ -20,5 +20,5 @@
     <div class="number">4</div>
   </div>
   <div class="text">Oops... Page introuvable !</div>
-  <a href="/" class="button">Redirection automatique vers la page d'accueil dans quelques secondes...</a>
+  <a [routerLink]="['/']" class="button">Redirection automatique vers la page d'accueil dans quelques secondes...</a>
 </div>
