--- a/src/app/components/shared/aside/cart/cart.component.css
+++ b/src/app/components/shared/aside/cart/cart.component.css
@@ -1,1 +1,11 @@
+.card {
+  transition: transform 0.2s;
+}
+.card:hover {
+  transform: scale(1.02);
+}
 
+.product-thumbnail {
+  max-width: 100px;
+  max-height: 100px;
+}
