--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -1,57 +1,31 @@
 <div class="container mt-5">
-  <div align="right" class="mb-3">
-    <button mat-raised-button (click)="checkout()" style="color: gold; padding: 10px 20px;">Checkout</button>
-  </div>
-
-  <table mat-table [dataSource]="cartItems" class="mat-elevation-z8">
-    <ng-container matColumnDef="Name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.product.productName}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let element"> {{element.product.productDescription}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Price">
-      <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.product.productActualPrice}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Discounted Price">
-      <th mat-header-cell *matHeaderCellDef> Discounted Price </th>
-      <td mat-cell *matCellDef="let element"> {{element.product.productDiscountedPrice}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Quantity">
-      <th mat-header-cell *matHeaderCellDef> Quantity </th>
-      <td mat-cell *matCellDef="let element">
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-          <button mat-icon-button color="accent" (click)="decreaseItemQuantity(element)">
-            <mat-icon>remove</mat-icon>
-          </button>
-          <span>{{ element.quantity }}</span>
-          <button mat-icon-button color="accent" (click)="increaseItemQuantity(element)">
-            <mat-icon>add</mat-icon>
-          </button>
+  <div *ngIf="(cartItems$ | async) as cartItems">
+    <div *ngFor="let item of cartItems; let i = index" class="card mb-3">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img [src]="item.image" class="img-fluid rounded-start" alt="{{item.title}}">
         </div>
-      </td>
-    </ng-container>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title">{{item.title}}</h5>
+            <p class="card-text">{{item.description}}</p>
+            <div class="card-text">
+              <small class="text-muted">Price: {{item.price | currency}}</small>
+            </div>
+            <div class="card-text">
+              <button (click)="decreaseQuantity(i)">-</button>
+              <span>{{itemQuantitiesInCart[item.id]}}</span>
+              <button (click)="increaseQuantity(i)">+</button>
+            </div>
+            <button class="btn btn-danger" (click)="removeItem(i)">Remove</button>
+          </div>
+          <div class="total-items-in-cart" *ngIf="totalItemsInCart$ | async as totalItemsInCart">
+            Total : {{ totalItemsInCart }}
+          </div>
 
-    <ng-container matColumnDef="Total Price">
-      <th mat-header-cell *matHeaderCellDef> Total Price </th>
-      <td mat-cell *matCellDef="let element"> {{ element.quantity * element.product.productDiscountedPrice }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let element">
-        <button mat-raised-button color="warn" (click)="removeItem(element.cartId)">Delete</button>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+        </div>
+      </div>
+    </div>
+    <button class="btn btn-primary" (click)="checkout()">Checkout</button>
+  </div>
 </div>
