--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.html
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.html
@@ -14,7 +14,7 @@
             <mat-card-title>{{ item.regularPrice }} $</mat-card-title>
           </mat-card-header>
         <!-- CART BUTTON-->
-         <app-cart-button [item]="item"></app-cart-button>
+         <app-cart-item-quantity [item]="item"></app-cart-item-quantity>
         </mat-card-actions>
         <div class="rating">
           <mat-icon
