displayed cart in whole app with cart store

--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<!-- <div class="container mt-5">
   <div *ngIf="(cartItems$ | async) as cartItems">
     <div *ngFor="let item of cartItems; let i = index" class="card mb-3">
       <div class="row g-0">
@@ -37,4 +37,4 @@
     </mat-select>
 
   </mat-form-field>
-</div>
+</div> -->
