synchronized items into cart with total items displayed from cart icon

--- a/src/app/components/shared/cart-item-quantity/cart-item-quantity.component.html
+++ b/src/app/components/shared/cart-item-quantity/cart-item-quantity.component.html
@@ -1,7 +1,7 @@
 <div class="cart-container">
   <mat-icon>shopping_cart</mat-icon>
   <mat-form-field (click)="$event.stopPropagation()">
-    <mat-select [value]="selectedQuantity" (selectionChange)="changeItemQuantity(selectedQuantity)">
+    <mat-select [value]="selectedQuantity" (selectionChange)="changeItemQuantity($event)">
       <mat-option *ngFor="let number of numbers" [value]="number">{{number}}</mat-option>
     </mat-select>
   </mat-form-field>
