added more selector to cart component

--- a/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.html
+++ b/src/app/components/section/item/list-item-without-meilisearch/list-item-without-meilisearch.component.html
@@ -11,7 +11,7 @@
             <mat-icon>favorite</mat-icon>
           </button>
           <mat-card-header>
-            <mat-card-title>{{ item.regularPrice }} $</mat-card-title>
+            <mat-card-title>{{ item.regularPrice }} €</mat-card-title>
           </mat-card-header>
         <!-- CART BUTTON-->
          <app-cart-item-quantity [item]="item"></app-cart-item-quantity>
