--- a/src/app/components/shared/aside/cart/cart.component.css
+++ b/src/app/components/shared/aside/cart/cart.component.css
@@ -1,11 +1,43 @@
-.card {
-  transition: transform 0.2s;
-}
-.card:hover {
-  transform: scale(1.02);
+.container {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.product-thumbnail {
-  max-width: 100px;
-  max-height: 100px;
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  gap: 2rem;
+  width: 100%;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
+  overflow: hidden;
+}
+
+.product-card img {
+  width: 100%;
+  height: 12.5rem;
+  object-fit: cover;
+}
+
+.content {
+  padding: 1rem;
+  text-align: center;
+}
+
+.total-items-in-cart,
+.sub-total,
+.total-with-taxes {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+button {
+  margin-top: 2rem;
+  padding: 1rem 2rem;
 }
