--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -1,24 +1,44 @@
 <div class="container">
   <h1>Votre panier</h1>
 
-  <div class="cart-grid">
-    <div *ngFor="let item of (cartItems$ | async); let i = index" class="cart-item">
-      <img [src]="item.imageUrl" alt="{{item.title}}">
-      <div class="item-info">
-        <h2>{{item.title}}</h2>
-        <p>{{item.category.name}}</p>
-        <p><small class="text-muted">Prix en euros: {{item.regularPrice | currency:'EUR':true}}</small></p>
-        <app-cart-item-quantity [item]="item"></app-cart-item-quantity>
-        <button (click)="removeItemFromCart(item.id)">Supprimer</button>
-      </div>
-    </div>
+  <table class="cart-table">
+    <thead>
+      <tr>
+        <th>PRODUIT</th>
+        <th>PRIX</th>
+        <th>QUANTITÉ</th>
+        <th>SOUS-TOTAL</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let item of (cartItems$ | async); let i = index">
+        <td>
+          <div class="image-icon-container">
+            <mat-icon (click)="removeItemFromCart(item.id)">delete</mat-icon>
+            <img [src]="item.imageUrl" alt="{{item.title}}" class="product-image">
+          </div>
+          <span>{{item.title}}</span>
+        </td>
+        <td>{{item.regularPrice | currency:'EUR':true}}</td>
+        <td>
+          <app-cart-item-quantity [item]="item"></app-cart-item-quantity>
+        </td>
+        <td>{{(item.regularPrice * item.quantity) | currency:'EUR':true}}</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td></td>
+        <td></td>
+        <td>{{ (totalItems$ | async) }}</td>
+        <td>{{ (subTotal$ | async) | currency:'EUR':true }}</td>
+      </tr>
+    </tfoot>
+  </table>
 
-    <div class="cart-summary">
-      <h3>Total d'articles dans le panier: <span *ngIf="(totalItems$ | async) as totalItemsInCart">{{ totalItemsInCart }}</span></h3>
-      <h3>Prix HT: <span *ngIf="(subTotal$ | async) as subTotal">{{ subTotal | currency:'EUR':true }}</span></h3>
-      <h3>Prix TTC: <span *ngIf="(totalWithTaxes$ | async) as totalWithTaxes">{{ totalWithTaxes | currency:'EUR':true }}</span></h3>
-
-      <button class="primary-button" (click)="checkout()">Paiement</button>
-    </div>
+  <div class="checkout-section">
+    <h2>Total TTC : {{ (totalWithTaxes$ | async) | currency:'EUR':true }}</h2>
+    <button class="primary-button" color="primary" (click)="checkout()">Valider la commande</button>
   </div>
 </div>
+
