--- a/src/app/components/shared/cart-item-quantity/cart-item-quantity.component.html
+++ b/src/app/components/shared/cart-item-quantity/cart-item-quantity.component.html
@@ -1,7 +1,12 @@
 <div class="cart-container">
   <mat-icon>shopping_cart</mat-icon>
-  <mat-form-field (click)="$event.stopPropagation()">
-    <mat-select [value]="selectedQuantity" (selectionChange)="changeItemQuantity($event)">
+  <!-- Bouton d'ajout affiché uniquement si la quantité est 0 -->
+  <button *ngIf="selectedQuantity == 0" mat-icon-button color="primary" (click)="addToCart(item, $event); openSelect()">
+    <mat-icon>add</mat-icon>
+  </button>
+  <!-- Field de sélection de la quantité affiché uniquement si l'item est dans le panier et la quantité est supérieure à 0 -->
+  <mat-form-field *ngIf="isInCart" (click)="$event.stopPropagation()">
+    <mat-select #quantitySelect [value]="selectedQuantity" (selectionChange)="changeItemQuantity($event)">
       <mat-option *ngFor="let number of numbers" [value]="number">{{number}}</mat-option>
     </mat-select>
   </mat-form-field>
