--- a/src/app/components/section/item/detail-item/detail-item.component.html
+++ b/src/app/components/section/item/detail-item/detail-item.component.html
@@ -39,7 +39,7 @@
       <p><strong>Année :</strong> {{ item.year }}</p>
       <p><strong>Version :</strong> {{ item.version }}</p>
       <p><strong>ISBN13 :</strong> {{ item.isbn13 }}</p>
-      <button mat-raised-button color="primary" (click)="goBackToListItems()">Retour aux articles</button>
+      <button class="items-back-button" mat-raised-button (click)="goBackToListItems()">Retour aux articles</button>
     </div>
   </div>
 
