--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,3 +2,17 @@
   width: 36%;
   transition: transform 1..11s ease-in, transform 3.33s ease-out;
 }
+
+app-nav {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
+
+.sidenav-cart {
+  width: 36%;
+}
+
+
+
