--- a/src/app/components/section/item/filters-item/filters-item.component.css
+++ b/src/app/components/section/item/filters-item/filters-item.component.css
@@ -4,9 +4,19 @@
 
 mat-sidenav {
   width: 250px;
+  margin-top: 7.7rem;
+  margin-right: 36%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   background-color: #f7f7f7;
-  padding: 1rem;
+  padding: 1.11rem;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+}
+
+mat-sidenav-content {
+  margin-top: 6.5rem;
 }
 
 .filters {
