--- a/src/app/components/shared/aside/cart/cart.component.css
+++ b/src/app/components/shared/aside/cart/cart.component.css
@@ -1,9 +1,3 @@
-.container {
-  position: sticky;
-  top: 20px;
-  padding: 1.11rem;
-  overflow: auto;
-}
 
 h1 {
   font-weight: bold;
@@ -24,8 +18,8 @@ h1 {
 }
 
 .product-image {
-  width: 55px;
-  height: 55px;
+  width: 77px;
+  height: 77px;
   object-fit: cover;
   margin-bottom: 1.11rem;
 }
@@ -44,13 +38,14 @@ h1 {
   margin-bottom: 1.11rem;
 }
 
-.primary-button {
+.cart-order-button {
   background-color: #0BB9F0;
-  color: white;
+  color: whitesmoke;
   border-radius: 44%;
   padding: 0.5rem 1rem;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.11rem;
+  margin: 1.11rem;
 }
 
 .primary-button:hover {
