--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -37,8 +37,8 @@
   </table>
 
   <div class="checkout-section">
-    <h2>Total TTC : {{ (totalWithTaxes$ | async) | currency:'EUR':true }}</h2>
-    <button class="primary-button" color="primary" (click)="checkout()">Valider la commande</button>
+    <h2><span style="text-decoration: underline;">Total TTC</span> : <span style="font-weight: bolder;">{{ (totalWithTaxes$ | async) | currency:'EUR':true }}</span></h2>
+    <button class="cart-order-button" mat-raised-button (click)="checkout()">Valider la commande</button>
   </div>
 </div>
 
