displayed responsive components for cart and items with filters

--- a/src/app/components/section/item/filters-item/filters-item.component.css
+++ b/src/app/components/section/item/filters-item/filters-item.component.css
@@ -118,3 +118,20 @@ p {
   border-color: #808080 !important;
 }
 
+@media (max-width: 770px) {
+  mat-sidenav-content  {
+    margin-top: 22rem;
+  }
+}
+
+@media (max-width: 770px) {
+  mat-sidenav  {
+    margin-top: 24rem;
+  }
+}
+
+@media (max-width: 465px) {
+  mat-sidenav  {
+    display: none;
+  }
+}
