displayed responsive components for cart and items with filters

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,5 +14,16 @@ app-nav {
   width: 36%;
 }
 
+@media (max-width: 770px) {
+  .mat-sidenav  {
+    width: 100%;
+  }
+}
+
+@media (max-width: 888px) {
+  .mat-sidenav  {
+    width: 100%;
+  }
+}
 
 
