added order for payment

--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -38,7 +38,7 @@
 
   <div class="checkout-section">
     <h2><span style="text-decoration: underline;">Total TTC</span> : <span style="font-weight: bolder;">{{ (totalWithTaxes$ | async) | currency:'EUR':true }}</span></h2>
-    <button class="cart-order-button" mat-raised-button (click)="checkout()">Valider la commande</button>
+    <button class="cart-order-button" mat-raised-button (click)="orderValidate()">Valider la commande</button>
   </div>
 </div>
 
