--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,6 +12,10 @@ app-nav {
 
 .sidenav-cart {
   width: 36%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 @media (max-width: 1101px) {
