--- a/src/app/components/shared/aside/cart/cart.component.css
+++ b/src/app/components/shared/aside/cart/cart.component.css
@@ -48,8 +48,21 @@ h1 {
   margin: 1.11rem;
 }
 
-.primary-button:hover {
+.cart-order-button:hover {
   background-color: #2196F3;
+}
+.cart-clear-button {
+  background-color: #FF4080;
+  color: whitesmoke;
+  border-radius: 44%;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 1.11rem;
+  margin: 1.11rem;
+}
+
+.cart-clear-button:hover {
+  background-color: #e2004b;
 }
 
 .checkout-section {
