--- a/src/app/components/shared/nav/nav.component.html
+++ b/src/app/components/shared/nav/nav.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="nav-container">
   <div class="nav-wrapper">
     <a class="nav-logo" routerLink="/">
-      <img src="../../../assets/L2i.ico">
+      <img src="../../../assets/L2i.ico" />
     </a>
 
-      <!-- Desktop menu -->
+    <!-- Desktop menu -->
     <div class="menu">
       <button mat-button routerLink="/items/books">Articles</button>
       <button mat-button routerLink="/promos">Promos</button>
@@ -24,9 +24,17 @@
 
     <div class="nav-actions">
       <!-- User button for connection -->
-      <button mat-icon-button routerLink="/">
-        <mat-icon>account_circle</mat-icon>
-      </button>
+      <ng-container *ngIf="isAuthenticated$ | async; else notLoggedIn">
+        <button mat-icon-button (click)="logout()">
+          <mat-icon>exit_to_app</mat-icon>
+        </button>
+      </ng-container>
+
+      <ng-template #notLoggedIn>
+        <button mat-icon-button routerLink="/auth/login">
+          <mat-icon>account_circle</mat-icon>
+        </button>
+      </ng-template>
 
       <!-- Cart drawer for shopping -->
       <app-aside (click)="toggleDrawer()"></app-aside>
