implemented register component for authentication

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isLoginPage(); else mainLayout">
+<ng-container *ngIf="isAuthPage(); else mainLayout">
   <router-outlet></router-outlet>
 </ng-container>
 
