--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
   <div class="login-card">
-    <h2>Connexion</h2>
+    <h2>S'identifier</h2>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="input-field">
         <input
@@ -33,8 +33,14 @@
         </div>
       </div>
       <button type="submit" class="login-button" [disabled]="loginForm.invalid">
-        Se connecter
+        Identifiez-vous
       </button>
     </form>
+    <div class="options">
+      <button (click)="goBack()" class="back-button">Retour</button>
+      <a routerLink="/auth/register" class="register-link"
+        >Créer votre compte</a
+      >
+    </div>
   </div>
 </div>
