--- a/src/app/components/shared/account-customer-drawer/account-customer-drawer.component.html
+++ b/src/app/components/shared/account-customer-drawer/account-customer-drawer.component.html
@@ -1,4 +1,3 @@
-<mat-drawer (click)="openAccountCustomerDrawer($event)"> </mat-drawer>
-<button mat-icon-button>
+<button (click)="openAccountCustomerDrawer($event)" mat-icon-button>
   <mat-icon>account_circle</mat-icon>
 </button>
