--- a/src/app/components/shared/aside/cart/cart.component.html
+++ b/src/app/components/shared/aside/cart/cart.component.html
@@ -11,35 +11,53 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let item of (cartItems$ | async); let i = index">
+      <tr *ngFor="let item of cartItems$ | async; let i = index">
         <td>
           <div class="image-icon-container">
             <mat-icon (click)="removeItemFromCart(item.id)">delete</mat-icon>
-            <img [src]="item.imageUrl" alt="{{item.title}}" class="product-image">
+            <img
+              [src]="item.imageUrl"
+              alt="{{ item.title }}"
+              class="product-image"
+            />
           </div>
-          <span>{{item.title}}</span>
+          <span>{{ item.title }}</span>
         </td>
-        <td>{{item.regularPrice | currency:'EUR':true}}</td>
+        <td>{{ item.regularPrice | currency : "EUR" : true }}</td>
         <td>
           <app-cart-item-quantity [item]="item"></app-cart-item-quantity>
         </td>
-        <td>{{(item.regularPrice * item.quantity) | currency:'EUR':true}}</td>
+        <td>
+          {{ item.regularPrice * item.quantity | currency : "EUR" : true }}
+        </td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
         <td></td>
         <td></td>
-        <td>{{ (totalItems$ | async) }}</td>
-        <td>{{ (subTotal$ | async) | currency:'EUR':true }}</td>
+        <td>{{ totalItems$ | async }}</td>
       </tr>
     </tfoot>
   </table>
 
   <div class="checkout-section">
-    <button class="cart-clear-button" mat-raised-button (click)="clearCart()">Vider le panier</button>
-    <h2><span style="text-decoration: underline;">Total TTC</span> : <span style="font-weight: bolder;">{{ (totalWithTaxes$ | async) | currency:'EUR':true }}</span></h2>
-    <button class="cart-order-button" mat-raised-button (click)="orderValidate()">Valider la commande</button>
+    <button class="cart-clear-button" mat-raised-button (click)="clearCart()">
+      Vider le panier
+    </button>
+    <h2>
+      <span style="text-decoration: underline">Total TTC</span> :
+      <span style="font-weight: bolder">{{
+        totalTTC$ | async | currency : "EUR" : true
+      }}</span>
+    </h2>
+    <button
+      class="cart-order-button"
+      mat-raised-button
+      (click)="orderValidate()"
+    >
+      Valider la commande
+    </button>
   </div>
 </div>
 
@@ -52,6 +70,3 @@
     <button mat-button mat-dialog-close>Ok</button>
   </div>
 </ng-template>
-
-
-
