--- a/src/app/components/shared/order/order.component.css
+++ b/src/app/components/shared/order/order.component.css
@@ -1,13 +1,8 @@
-.order-summary {
+.container {
   position: relative;
   top: 7rem;
-  right: 0;
   height: calc(100% - 7rem);
   width: 100%;
-  background-color: #f9f9f9;
-  padding: 1.11rem;
-  overflow-y: auto;
-  box-shadow: -2px 0px 5px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -15,129 +10,72 @@
   justify-content: center;
 }
 
-.order-header {
+h1 {
   font-weight: bold;
-  font-size: 1.5rem;
+  text-decoration: underline;
+  font-size: larger;
   margin-bottom: 1.11rem;
   color: #333;
 }
 
-.cart-items {
-  display: flex !important;
-  flex-direction: row !important;
-  flex-wrap: wrap !important;
-  justify-content: space-around !important;
+.cart-table {
+  width: 100%;
+  border-collapse: collapse;
 }
 
-.product-card {
-  margin: 0.11rem !important;
-}
-
-.section {
-  margin-bottom: 1.11rem;
-}
-
-.order-total {
-  font-weight: bold;
-  margin-top: 1.11rem;
+.cart-table th,
+.cart-table td {
+  padding: 1rem;
+  border-bottom: 1px solid #F5F5F5;
 }
 
 .product-image {
   width: 77px;
   height: 77px;
   object-fit: cover;
-  margin-bottom: 1.11rem;
+  margin-right: 1.11rem;
 }
 
-.section {
-  text-align: center;
-  display: inline-block;
+.image-icon-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
-h3 {
-  text-decoration: underline;
-  margin-bottom: 1.01rem;
-}
-
-.product-image {
-  width: auto;
-  height: 101px;
-  font-size: smaller;
-}
-
-.modify-button,
 .confirm-button {
   background-color: #0BB9F0;
   color: whitesmoke;
   border-radius: 7.7%;
-  padding: 0.55rem 1.11rem;
+  padding: 0.5rem 1rem;
   cursor: pointer;
   font-size: 1.11rem;
   margin: 1.11rem;
-  border: none;
-  display: inline-block;
 }
 
-.modify-button:hover,
 .confirm-button:hover {
   background-color: #2196F3;
 }
 
 .modify-button {
   background-color: #FF4080;
+  color: whitesmoke;
+  border-radius: 7.7%;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 1.11rem;
+  margin: 1.11rem;
 }
 
 .modify-button:hover {
   background-color: #e2004b;
 }
 
-.product-card {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0.11rem;
-  flex-basis: calc(33.33% - 0.22rem);
-  height: 202px;
-}
-
-.mat-card-title {
-  white-space:pre-wrap;
-  overflow-wrap: break-word;
-  max-width: 177px;
-}
-
-
-.card-content {
+.checkout-section {
   display: flex;
   align-items: center;
-}
-
-.product-details {
-  margin-left: 1.11rem;
-}
-
-@media screen and (max-width: 888px) {
-  .order-summary {
-    top: 23rem;
-    text-align: center;
-  }
-
-  .cart-items {
-    flex-direction: column !important;
-  }
-
-  .product-card {
-    max-width: 89%;
-    height: auto;
-  }
-
-  .product-details {
-    margin-left: 0;
-    text-align: center;
-  }
-
-  .mat-card-title {
-    white-space: normal;
-    max-width: 100%;
-  }
+  justify-content: flex-end;
+  gap: 1.11rem;
+  margin-top: 1.11rem;
+  padding-top: 1.11rem;
 }
